--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -12,6 +12,8 @@ jobs:
     outputs:
       sha_short: ${{ steps.sha_short.outputs.sha_short }}
     steps:
+      - name: Pulling git repo
+        uses: actions/checkout@v2
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
