--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./url-shortener-react
+        working-directory: url-shortener-react
     outputs:
       sha_short: ${{ steps.sha_short.outputs.sha_short }}
     steps:
@@ -32,7 +32,6 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./url-shortener-react
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
