--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -6,7 +6,7 @@ jobs:
   build:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
-    defaults:
+    # defaults:
       # run:
       #   working-directory: url-shortener-react
     outputs:
