--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -12,16 +12,14 @@ jobs:
   build:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
-    # defaults:
-      # run:
-      #   working-directory: url-shortener-react
+    defaults:
+      run:
+        working-directory: ./url-shortener-react
     outputs:
       sha_short: ${{ steps.sha_short.outputs.sha_short }}
     steps:
       - name: Pulling git repo
         uses: actions/checkout@v4
-        with:
-          path: url-shortener-react
       - name: print folder
         run: pwd
       - name: Login to Docker Hub
