--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -17,8 +17,6 @@ jobs:
     steps:
       - name: Pulling git repo
         uses: actions/checkout@v4
-      - name: print folder
-        run: pwd
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -33,11 +31,13 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
+      - name: print folder
+        run: pwd
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./url-shortener-react
+          context: /url-shortener-react
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
