--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -37,7 +37,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: /url-shortener-react
+          context: ./url-shortener-react
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
