--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -14,6 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       sha_short: ${{ steps.sha_short.outputs.sha_short }}
+    defaults:
+      run:
+        working-directory: ./url-shortener-react
     steps:
       - name: Pulling git repo
         uses: actions/checkout@v4
@@ -35,7 +38,6 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./url-shortener-react
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
