--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -16,7 +16,7 @@ jobs:
       sha_short: ${{ steps.sha_short.outputs.sha_short }}
     defaults:
       run:
-        working-directory: url-shortener-react
+        working-directory: /url-shortener-react
     steps:
       - name: print folder
         run: pwd
