--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -14,13 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       sha_short: ${{ steps.sha_short.outputs.sha_short }}
-    defaults:
-      run:
-        working-directory: ./url-shortener-react
     steps:
       - name: Pulling git repo
         uses: actions/checkout@v4
-      - name: print folder
+      - name: Change Folder
+        run: cd ./url-shortener-react
+      - name: Print Directory
         run: pwd
       - name: Login to Docker Hub
         uses: docker/login-action@v1
