--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -17,10 +17,6 @@ jobs:
     steps:
       - name: Pulling git repo
         uses: actions/checkout@v4
-      - name: Change Folder
-        run: cd ./url-shortener-react
-      - name: Print Directory
-        run: pwd
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -39,7 +35,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          file: ./Dockerfile
+          file: ./url-shortener-react/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/url-shortener-fe:sha-${{ steps.sha_short.outputs.sha_short }}
