--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -33,9 +33,10 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Build and push
         id: docker_build
+        working-directory: ./url-shortener-react
         uses: docker/build-push-action@v2
         with:
-          file: ./url-shortener-react/Dockerfile
+          file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/url-shortener-fe:sha-${{ steps.sha_short.outputs.sha_short }}
