--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -35,7 +35,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          working-directory: ./url-shortener-react
+          context: url-shortener-react
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
