--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -33,9 +33,9 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
-          context: url-shortener-react
+          context: ./url-shortener-react
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
