--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -34,11 +34,13 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
+      - name: Print Working Directory
+        run: pwd
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v6
         with:
-          # context: ./url-shortener-react
+          context: ./url-shortener-react
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
