--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -40,7 +40,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v6
         with:
-          context: ./url-shortener-react
+          context: "./url-shortener-react"
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
