--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -40,7 +40,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v6
         with:
-          file: ./Dockerfile
+          context: ./url-shortener-react
+          file: ./url-shortener-react/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/url-shortener-fe:sha-${{ steps.sha_short.outputs.sha_short }}
