--- a/url-shortener-sb/Jenkinsfile
+++ b/url-shortener-sb/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
       steps {
         sh 'ls -ltr'
         // build the project and create a JAR file
-        sh 'cd url-shortener-sb && mvn clean package'
+        sh 'cd url-shortener-sb && ./mvnw clean package'
       }
     }
     stage('Static Code Analysis') {
