--- a/url-shortener-sb/Jenkinsfile
+++ b/url-shortener-sb/Jenkinsfile
@@ -18,7 +18,8 @@ pipeline {
         // build the project and create a JAR file
         sh 'apt-get update && apt-get install -y sudo'
         sh 'cd url-shortener-sb'
-        sh 'sudo mvnw clean package'
+        sh 'sudo - su'
+        sh "./mvnw clean package"
       }
     }
     stage('Static Code Analysis') {
