--- a/url-shortener-sb/Jenkinsfile
+++ b/url-shortener-sb/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
         sh 'apt-get update && apt-get install -y sudo'
         sh 'cd url-shortener-sb'
         sh 'sudo su'
-        sh '"./mvnw" clean package'
+        sh "./mvnw clean package"
       }
     }
     stage('Static Code Analysis') {
@@ -30,7 +30,7 @@ pipeline {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
           sh 'cd url-shortener-sb'
           sh 'sudo su'
-          sh '"./mvnw" sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+          sh "./mvnw sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}"
         }
       }
     }
