--- a/url-shortener-sb/Jenkinsfile
+++ b/url-shortener-sb/Jenkinsfile
@@ -19,6 +19,7 @@ pipeline {
         sh 'apt-get update && apt-get install -y sudo'
         sh 'cd url-shortener-sb'
         sh 'sudo su'
+        sh 'chmod +x ./mvnw'
         sh "./mvnw clean package"
       }
     }
