--- a/url-shortener-sb/Jenkinsfile
+++ b/url-shortener-sb/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
         sh 'cd url-shortener-sb'
         sh 'sudo su'
         sh 'chmod +x url-shortener-sb/mvnw'
-        sh "./mvnw clean package"
+        sh "url-shortener-sb/mvnw clean package"
       }
     }
     stage('Static Code Analysis') {
@@ -31,7 +31,7 @@ pipeline {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
           sh 'cd url-shortener-sb'
           sh 'sudo su'
-          sh "./mvnw sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}"
+          sh "url-shortener-sb/mvnw sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}"
         }
       }
     }
