--- a/url-shortener-sb/pom.xml
+++ b/url-shortener-sb/pom.xml
@@ -27,7 +27,10 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
+        	<maven.compiler.version>3.8.1</maven.compiler.version>
+        	<maven.compiler.source>1.8</maven.compiler.source>
+        	<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
