--- a/url-shortener-sb/Jenkinsfile
+++ b/url-shortener-sb/Jenkinsfile
@@ -25,13 +25,13 @@ pipeline {
     }
     stage('Static Code Analysis') {
       environment {
-        SONAR_URL = "http://54.210.7.14:9000"
+        SONAR_URL = "http://3.94.204.194:9000"
       }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
           sh 'cd url-shortener-sb'
           sh 'sudo su'
-          sh "url-shortener-sb/mvnw sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}"
+          sh ' "url-shortener-sb/mvnw sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}" '
         }
       }
     }
