--- a/url-shortener-sb/Jenkinsfile
+++ b/url-shortener-sb/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
         sh 'sudo su'
         sh 'chmod +x url-shortener-sb/mvnw'
         sh 'cd url-shortener-sb'
-        sh '"url-shortener-sb/mvnw" clean package -f "url-shortener-sb/pom.xml"'
+        sh '"url-shortener-sb/mvnw" clean package -f "url-shortener-sb/pom.xml" -DskipTests'
       }
     }
     stage('Static Code Analysis') {
