--- a/url-shortener-sb/Jenkinsfile
+++ b/url-shortener-sb/Jenkinsfile
@@ -44,7 +44,7 @@ pipeline {
       steps {
         script {
             sh 'sudo su'
-            sh 'sudo apt install docker.io'
+            sh 'sudo apt install docker.io -y'
             sh 'cd url-shortener-sb && docker build -t ${DOCKER_IMAGE} .'
             def dockerImage = docker.image("${DOCKER_IMAGE}")
             docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
