--- a/url-shortener-sb/Jenkinsfile
+++ b/url-shortener-sb/Jenkinsfile
@@ -61,7 +61,7 @@ pipeline {
         steps {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
-                    su jenkins
+                    echo "jenkins" | su jenkins
                     git config user.email "tsrahul100@gmail.com"
                     git config user.name "Rahul Ts"
                     BUILD_NUMBER=${BUILD_NUMBER}
