--- a/deploy/deploy-backend.yaml
+++ b/deploy/deploy-backend.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: backend-sb
-        image: sp3ar007/url-shortener-be:replaceImageTag
+        image: sp3ar007/url-shortener-be:21
         ports:
         - containerPort: 8080
