--- a/deploy/deploy-backend.yaml
+++ b/deploy/deploy-backend.yaml
@@ -16,6 +16,18 @@ spec:
     spec:
       containers:
       - name: backend-sb
-        image: sp3ar007/url-shortener-be:21
+        image: sp3ar007/url-shortener-be:replaceImageTag
         ports:
         - containerPort: 8080
+        env:
+        - name: DATABASE_USERNAME
+          value: springboot
+        - name: DATABASE_PASSWORD
+          value: postgres
+        - name: DATABASE_URL
+          value: jdbc:postgresql://my-postgresql-rw.default.svc.cluster.local:5432/urlshortenerdb
+        - name: FRONTEND_URL
+          value: frontend-service.default.svc.cluster.local
+        - name: DATABASE_DIALECT
+          value: org.hibernate.dialect.PostgreSQLDialect
+    
