--- a/ansible_configs/backend-playbook.yaml
+++ b/ansible_configs/backend-playbook.yaml
@@ -1,7 +1,7 @@
 ---
 - hosts: backend
   become: yes
-  connection: local
+  # connection: local
   tasks:
     - name: Clone a github repository
       git:
